--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   padding: 0 46px;
   box-sizing: border-box;
+  margin-top: 65px;
 
   .prev-image {
     width: 10px;
