--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $background-color: #080C0F;
-$text-color-yellow: #ffee00;
+$color-yellow: #ffee00;
 
 $text-color: #EDEDED;
 $text-secondary-color: #969798;
