--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -10,14 +10,15 @@
 
   input {
     width: 100%;
-    height: 100%;
+    height: 60px;
     border: none;
     background: none;
     color: white;
     font-size: 16px;
     padding: 0 10px;
+    border-bottom: 1px solid #646769;
   }
-
+  
   .search-button {
     background: none;
     border: none;
