--- a/src/components/OrderCard/OrderCard.scss
+++ b/src/components/OrderCard/OrderCard.scss
@@ -137,6 +137,7 @@
         .location-img {
           width: 13.75px;
           height: 17.5px;
+          padding-left: 5px;
         }
 
         .event-info {
