--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,11 +4,7 @@ $color-yellow: #ffee00;
 $text-color: #EDEDED;
 $text-secondary-color: #969798;
 
-$card-bg-color: #1c1c1c;  // Fondo de la tarjeta
-$blue-color: #4ba6ef;     // Azul
+$card-bg-color: #1c1c1c;
+$blue-color: #4ba6ef;
 
-// Fuentes
 $font-family: 'Open Sans', sans-serif;
-
-// Sombra
-$card-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
