--- a/src/components/OrderCard/OrderCard.scss
+++ b/src/components/OrderCard/OrderCard.scss
@@ -59,7 +59,8 @@
         .order-point {
           width: 10px;
           height: 10px;
-          background-color: blue;
+          background-color: #0C7DED;
+          ;
           border-radius: 50%;
         }
         .status-dot {
