--- a/src/components/OrderCard/OrderCard.scss
+++ b/src/components/OrderCard/OrderCard.scss
@@ -26,7 +26,7 @@
   .order-card {
     width: 347.55px;
     height: 290.5px;
-    background-color: $background-color;
+    background-color: #0f1315;
     border-radius: 20px;
     color: white;
     box-sizing: border-box;
