--- a/src/components/OrderTrace/OrderTrace.scss
+++ b/src/components/OrderTrace/OrderTrace.scss
@@ -1,13 +1,14 @@
 @import '/src/styles/variables.scss';
 
 .order-trace-container {
-  color: white;
   display: flex;
   flex-direction: column;
   width: 390px;
   height: 304px;
   border: 1.5px solid #646769;
   border-radius: 20px 0 0 20px;
+  margin-top: 30px;
+  background-color: #0f1315;
 
   .order-trace {
     margin-top: 24px;
