--- a/src/components/CargoDetails/CargoDetails.scss
+++ b/src/components/CargoDetails/CargoDetails.scss
@@ -5,6 +5,6 @@
   height: 1323px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
   background-color: $background-color;
 }
