--- a/src/components/OrderTrace/OrderTrace.scss
+++ b/src/components/OrderTrace/OrderTrace.scss
@@ -1,145 +1,152 @@
 @import '/src/styles/variables.scss';
 
-.order-trace-container {
+.order-trace-container{
+  width: 100%;
+  height: auto;
   display: flex;
-  flex-direction: column;
-  width: 390px;
-  height: 304px;
-  border: 1.5px solid #646769;
-  border-radius: 20px 0 0 20px;
-  margin-top: 30px;
-  background-color: #0f1315;
-
-  .order-trace {
-    margin-top: 24px;
-    margin-bottom: 22px;
-    padding-left: 50px;
-
-    .order-reference {
-      color: $text-color;
-      padding-right: 5px;
-      font-weight: 600;
-      font-size: 13.1px;
-    }
-
-    .order-id {
-      color: $text-color;
-      font-weight: 600;
-      font-size: 17.5px;
-    }
-  }
-
-  .orders {
+  justify-content: flex-end;
+  .order-trace-content {
     display: flex;
     flex-direction: column;
-    gap: 30px;
-
-    .order-pickup {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
+    width: 390px;
+    height: 304px;
+    border: 1.5px solid #646769;
+    border-radius: 20px 0 0 20px;
+    margin-top: 30px;
+    background-color: #0f1315;
   
-      .pickup-img {
-        width: 26.58px;
-        height: 17.68px;
+    .order-trace {
+      margin-top: 24px;
+      margin-bottom: 22px;
+      padding-left: 50px;
+  
+      .order-reference {
+        color: $text-color;
+        padding-right: 5px;
+        font-weight: 600;
+        font-size: 13.1px;
       }
   
-      .event-info {
-        display: flex;
-        flex-direction: column;
-  
-        .event-status {
-          font-size: 11.2px;
-          font-weight: 800;
-          color: #535455;
-        }
-  
-        .event-location {
-          font-size: 15.5px;
-          color: $text-color;
-          font-weight: 800;
-        }
-  
-        .event-address {
-          font-size: 14.5px;
-          color: #909192;
-          font-weight: 600;
-        }
-  
-        .event-state-trace {
-          display: flex;
-          align-items: center;
-          width: 115px;
-          gap: 10px;
-          background-color: #16191CFE;
-          margin-top: 10px;
-          border-radius: 10px;
-          justify-content: center;
-          color: #868889;
-
-        }
+      .order-id {
+        color: $text-color;
+        font-weight: 600;
+        font-size: 17.5px;
       }
     }
   
-    .order-dropoff {
+    .orders {
       display: flex;
-      justify-content: space-evenly;
-      align-items: center;
+      flex-direction: column;
+      gap: 30px;
   
-      .onhold-img {
-        width: 26.58px;
-        height: 17.5px;
-        padding-left: 5px;
-      }
-  
-      .event-info {
+      .order-pickup {
         display: flex;
-        flex-direction: column;
-  
-        .event-status {
-          font-size: 11.2px;
-          font-weight: 800;
-          color: #535455;
+        justify-content: space-evenly;
+        align-items: center;
+    
+        .pickup-img {
+          width: 32px;
+          height: 32px;
         }
-  
-        .event-location {
-          font-size: 15.5px;
-          color: $text-color;
-          font-weight: 800;
-        }
-  
-        .event-address {
-          font-size: 14.5px;
-          color: #909192;
-          font-weight: 600;
-        }
-  
-        .event-state-trace {
+    
+        .event-info {
           display: flex;
-          align-items: center;
-          width: 115px;
-          gap: 10px;
-          background-color: #16191CFE;
-          margin-top: 10px;
-          border-radius: 10px;
-          justify-content: center;
-          color: #868889;
+          flex-direction: column;
+          width: 60%;
+    
+          .event-status {
+            font-size: 11.2px;
+            font-weight: 800;
+            color: #535455;
+          }
+    
+          .event-location {
+            font-size: 15.5px;
+            color: $text-color;
+            font-weight: 800;
+          }
+    
+          .event-address {
+            font-size: 14.5px;
+            color: #909192;
+            font-weight: 600;
+          }
+    
+          .event-state-trace {
+            display: flex;
+            align-items: center;
+            width: 115px;
+            gap: 10px;
+            background-color: #16191CFE;
+            margin-top: 10px;
+            border-radius: 10px;
+            justify-content: center;
+            color: #868889;
+  
+            .order-accepted {
+              width: 10px;
+              height: 10px;
+              background-color: #0C7DED;
+              ;
+              border-radius: 50%;
+            }
+          }
         }
       }
-    }
-  }
-
-  .order-accepted {
-    width: 10px;
-    height: 10px;
-    background-color: #0C7DED;
-    ;
-    border-radius: 50%;
-  }
-  .order-onhold {
-    width: 10px;
-    height: 10px;
-    background-color: #D9D9D980;    ;
-    border-radius: 50%;
+    
+      .order-dropoff {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    
+        .onhold-img {
+          width: 40px;
+          height: 40px;
+        }
+    
+        .event-info {
+          display: flex;
+          flex-direction: column;
+          width: 60%;
+    
+          .event-status {
+            font-size: 11.2px;
+            font-weight: 800;
+            color: #535455;
+          }
+    
+          .event-location {
+            font-size: 15.5px;
+            color: $text-color;
+            font-weight: 800;
+          }
+    
+          .event-address {
+            font-size: 14.5px;
+            color: #909192;
+            font-weight: 600;
+          }
+    
+          .event-state-trace {
+            display: flex;
+            align-items: center;
+            width: 115px;
+            gap: 10px;
+            background-color: #16191CFE;
+            margin-top: 10px;
+            border-radius: 10px;
+            justify-content: center;
+            color: #868889;
+  
+            .order-onhold {
+              width: 10px;
+              height: 10px;
+              background-color: #D9D9D980;
+              border-radius: 50%;
+            }
+          }
+        }
+      }
+    }  
   }
 }
