--- a/src/components/TrackOrder/TrackOrder.scss
+++ b/src/components/TrackOrder/TrackOrder.scss
@@ -3,7 +3,7 @@
 .track-order-container {
   display: flex;
   justify-content: center; 
-  align-items: center; 
+  align-items: center;
   position: relative; 
   margin-top: 80px;
   color: $text-color;
@@ -32,7 +32,7 @@
       display: flex;
       width: 100%;
       justify-content: center;
-      margin-top: 80px;
+      margin-top: 70px;
 
       .track-hour {
         color: $text-color;
@@ -45,13 +45,23 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 90%;
+      width: 100%;
       height: 50%;
-      gap: 30px;
+      gap: 20px;
 
       .track-steps {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
+
+        span {
+          width: 60%;
+          font-size: 15.4px;
+          font-weight: 800;
+        }
+
+        .step-pickup-by, .step-pickup-completed {
+          color: #414243;
+        }
       }
     }
 
